<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/hintTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:text="@string/hint_input_number_phone"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hintTextInput"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="phone"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:hint="@string/hint_et_phone_number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPhoneNumber"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_background_stop"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_weight="1"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_background_start"
            android:text="@string/accept"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_weight="1"
            android:layout_margin="8dp"/>

    </LinearLayout>

</RelativeLayout>