<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/nameApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:padding="24dp"
        android:textColor="@color/colorSecondary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/btnStartOrStopDetector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_detector"
            android:textColor="@color/colorBlack"
            android:textSize="32sp"
            android:background="@drawable/button_background_start"
            android:padding="40dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnPhoneNumberSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/phone_number_setting"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:background="@drawable/button_background"
            android:padding="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_ax"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="8dp"
            android:textColor="@color/colorWhite"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_ay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="8dp"
            android:textColor="@color/colorWhite"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_az"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="8dp"
            android:textColor="@color/colorWhite"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>